# ImageRep

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  data.json  data_generation.py  example.ipynb  fig1.py  fig2.py  fig3.py  fig4.py  micro_names.json  microlib_statistics.json  microlib_statistics_final.json  microlib_statistics_periodic.json  model_params.py  plot.py  predict_error.ipynb  pyproject.toml  representity.py  requirements dev.txt  requirements.txt  util.py  validation.py  validation3d.py  validation_nmc_sofc.py
.github/workflows/: tests.yaml
figures/: fig1.py  fig2.py  fig3.py  fig4.py
frontend/: package.json  postcss.config.js  tsconfig.json
frontend/src/: App.tsx  index.tsx
paper_figures/: fig1.py  fig2.py  fig3.py  fig_model_error.py  introduction.py  model_accuracy.py  normal_hist.py  pred_vs_true_cls.py  prediction interval.py  tpc_expectation_test.py  workflow.py
paper_figures/SI_figures/: SI_fig1.py  inpainting.py  negative_result.py  nrel_case_study.py  nrel_negative_example.py  porespy_ims.py  validation_tables.py
representativity/: core.py  data_generation.py  microlib_statistics.py  prediction_error.py  server.py  stat_gen.py  tpc_expectation_test.py  util.py  validation.py
representativity/correction_fitting/: micro_names.json  microlib_statistics.json  microlib_statistics.py  microlib_statistics_periodic.json  model_params.py  (+1 more)
slicegan/: __init__.py  networks.py  util.py  validation.py
tests/: test_representativity.py  tests.py  tpc_expectation_test.py  validation.py
website/: package.json  tsconfig.json
(+25 files in other folders)
